# pytaskpro

./: README.md  pyproject.toml  renovate.json
app/: cli.py  decorators.py  exceptions.py  manager.py  models.py  storage.py
app/core/: exceptions.py  models.py
app/mixins/: json_manuplation.py
data/: tasks.json
tests/: test_manager.py  test_models.py  test_storage.py  test_tasks.json
